  - CoreFoundation
  - CoreLocation
  - CoreServices
  - CoreText
  - CoreWLAN
  - CryptoTokenKit
  - EventKit
  - FinderSync
  - FSEvents
  - GameController
  - IMServicePlugIn
  - IMServicePlugIn
  - ImageCaptureCore
  - ImageCaptureCore
  - ImageIO
  - Intents
  - JavaScriptCore
  - LocalAuthentication
  - MapKit
  - MediaLibrary
  - MediaPlayer
  - MultipeerConnectivity
  - OpenDirectory
  - QTKit
  - QTKit
  - QuartzCore
  - QuickLook
  - QuickLook
  - SafariServices
  - ScreenSaver
  - SpriteKit
  - SystemConfiguration
  - WebKit

Version 3.3
-----------

New features:

* "pip install pyobjc" should now fail with a better error message when
  installing on a system that isn't running macOS.

* Updated framework wrappers for the API changes in the SDK shipped with
  Xcode 8.3.2.

* Added new framework wrapper: "pyobjc-framework-CoreServices".

  This exposes no new functionality for now, but makes it possible to access
  the functionality exposed by the "CoreServices" framework by using "import
  CoreServices", instead of directly importing the name of the subframework.

* Added new framework wrapper: "pyobjc-framework-iTunesLibrary"

  This is a wrapper for the iTunesLibrary framework located in
  "/Library/Frameworks", which is a framework installed by iTunes that
  can be used to (read-only) access information about an iTunes library.

* Issue #178: Add basic example for the Contacts framework

  The Contacts framwork now contains a very simple example that shows how
  to fetch contacts from the contact store.  Apple's documentation on
  the framework contains more comprehensive sample code, which should make
  it clear how to use the framework.

* Add initial support for deprecation warnings in metadata

  Metadata files can now contain information for deprecation warnings for
  methods and functions. Users can turn on deprecation warnings using::

    import objc
    objc.deprecation_warnings = objc.MAC_OS_X_VERSION_10_6
