@@ -9,4 +9,7 @@ static void __attribute__((__used__)) use_protocols(void)
     PyObject* p __attribute__((__unused__));
     p = PyObjC_IdToPython(@protocol(PHLivePhotoFrame)); Py_XDECREF(p);
 #endif
+#if PyObjC_BUILD_RELEASE >= 1013
+    p = PyObjC_IdToPython(@protocol(PHPhotoLibraryChangeObserver)); Py_XDECREF(p);
+#endif
 }
